--- a/Order-Management-System/src/main/resources/templates/orders.html
+++ b/Order-Management-System/src/main/resources/templates/orders.html
@@ -49,7 +49,9 @@
 					<td th:text="${order.customerId}"></td>
 					<td th:text="${order.adressOfDelivery}"></td>
 					<td th:text="${order.dateOfOrder}"></td>
-					<td><a th:href="@{/orders/{orderId} (id=${order.orderId})}" class= "btn btn-danger">Delete</a></td>	
+					<td><a th:href="@{/orders/{orderId} (orderId=${order.orderId})}" class= "btn btn-danger">Delete</a>
+						<a class= "btn btn-primary">Show Order</a></td>
+						
 				</tr>
 
 			</tbody>
